# elevatr

./: .gitattributes  .gitignore  .pre-commit-ci-config.yaml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  ci.yml.disabled  publish.yml
docs/: requirements-docs.txt
docs/source/: conf.py  data.rst  documentation.rst  index.rst  usage.rst
elevatr/: __init__.py  _version.py  downloader.py  get_elev_raster.py  raster.py  raster_operations.py  settings.py  utils.py
examples/: examples.ipynb
tests/: __init__.py  test_elevatr.py
