[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevatr"
version = "0.3.1a1"
description = "A Python package to simplify downloading and processing elevation data."
authors = [
    { name = "Titouan Le Gourrierec", email = "titouanlegourrierec@icloud.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyproj>=3.7.1",
    "pyvista>=0.46.4",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "tqdm>=4.67.1",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
