[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevatr"
version = "0.3.1a3"
description = "A Python package to simplify downloading and processing elevation data."
authors = [
    { name = "Titouan Le Gourrierec", email = "titouanlegourrierec@icloud.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyproj>=3.7.1",
    "pyvista>=0.46.4",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "tqdm>=4.67.1",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/titouanlegourrierec/elevatr"
Documentation = "https://elevatr.readthedocs.io"
"Bug Tracker" = "https://github.com/titouanlegourrierec/elevatr/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "twine>=6.2.0",
    "ty>=0.0.7",
]

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Checks for the absence of trailing commas. (conflict with the formatter)
    "D203",     # Checks for docstrings on class definitions that are not preceded by a blank line. (conflict with D211)
    "D212",     # Checks for docstring summary lines that are not positioned on the first physical line of the docstring. (conflict with D213)
]
mccabe.max-complexity = 20
pylint.max-args = 20
pylint.max-locals = 30
pylint.max-branches = 20
pylint.max-statements = 60

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Allow use of assert statements in test files.
    "PLC2701", # Allow import of a private module in test files.
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"              # Like Black, use double quotes for strings.
indent-style = "space"              # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false   # Like Black, respect magic trailing commas.
line-ending = "auto"                # Like Black, automatically detect the appropriate line ending.

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
